<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/padding"
    style="@style/backgroundBlue">

    <TextView android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        style="@style/title" />

    <TextView android:text="@string/welcome_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:id="@+id/welcome_desc"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_yourself"
        android:id="@+id/test_yourself"
        android:layout_below="@+id/welcome_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_test"
        android:id="@+id/start_test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/test_yourself"
        style="@style/buttonRed" />

</RelativeLayout>
